Added ROS integration to ROSCam activity     - able to connect via ROS, but camera interface force quits upon launch

--- a/app/src/main/res/layout/activity_roscam.xml
+++ b/app/src/main/res/layout/activity_roscam.xml
@@ -1,4 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical" >
+
+    <org.ros.android.view.camera.RosCameraPreviewView
+        android:id="@+id/ros_camera_preview_view"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" />
+
+</LinearLayout>
+
+<!--
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -6,4 +20,9 @@
     android:layout_height="match_parent"
     tools:context="utmg.android_interface.ROSCam">
 
-</android.support.constraint.ConstraintLayout>
+    <org.ros.android.view.camera.RosCameraPreviewView
+        android:id="@+id/ros_camera_preview_view"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" />
+
+</android.support.constraint.ConstraintLayout> -->
