--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,41 +11,19 @@
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
-
     </android.support.design.widget.AppBarLayout>
-
-    <TextView
-        android:id="@+id/xView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center|left"
-        android:text="hi"
-        android:textColor="@android:color/black"
-        tools:textSize="36sp" />
-
-    <TextView
-        android:id="@+id/yView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center|right"
-        android:text="bye"
-        android:textColor="@android:color/black"
-        tools:textSize="36sp" />
 
     <TextView
         android:id="@+id/centerCoord"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="center"
+        android:text="centerCoord"
         android:textColor="@android:color/black"
         android:textSize="36sp"/>
+
+
+
 
 
 
@@ -61,7 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:backgroundTint="@android:color/holo_orange_dark"
+        app:backgroundTint="@android:color/holo_green_dark"
         app:srcCompat="@android:drawable/ic_menu_send" />
 
     <android.support.design.widget.FloatingActionButton
@@ -70,22 +48,36 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|left"
         android:layout_margin="@dimen/fab_margin"
-        app:backgroundTint="@android:color/holo_purple"
+        app:backgroundTint="@android:color/holo_red_dark"
         app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
 
     <LinearLayout
-        android:id="@+id/linLay"
         android:layout_width="fill_parent"
-        android:layout_height="720dp"
+        android:layout_height="74dp">
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLay"
+        android:layout_width="match_parent"
+        android:layout_height="740dp"
         android:layout_gravity="center"
         android:background="@drawable/canvas_border">
 
         <utmg.android_interface.CanvasView
             android:id="@+id/signature_canvas"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:textColor="#FFFFFF" />
 
     </LinearLayout>
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="35dp"
+        android:background="?attr/colorPrimary"
+        app:popupTheme="@style/AppTheme.PopupOverlay" />
 
 </android.support.design.widget.CoordinatorLayout>
