--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -67,12 +67,12 @@
             android:text="      quad2pixel"/>
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/quad"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:src="@drawable/quad"/>
+    <!--<ImageView-->
+        <!--android:id="@+id/quad"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:adjustViewBounds="true"-->
+        <!--android:src="@drawable/quad"/>-->
 
     <LinearLayout
         android:id="@+id/linLay"
