--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -82,7 +82,7 @@
         android:layout_width="wrap_content"
         android:layout_height="80dp"
         android:adjustViewBounds="true"
-        android:layout_gravity="center|left"
+        android:layout_gravity="center|right"
         android:src="@drawable/sword"/>
 
     <LinearLayout
